1.6 add validation of unique time